restructuring the projects

--- a/content/project/github-markdown.mdx
+++ b/content/project/github-markdown.mdx
@@ -1,8 +1,9 @@
 ---
 image: '/kmf.PNG'
-title: Github Flavoured Markdown CheatSheet
+title: 'React Project'
 description: A markdown cheat sheet for GFM
 date: 2024-03-03
+tags: ['Original project', 'updates']
 published: true
 ---
 
