--- a/content/project/react-lifecycle-cats.mdx
+++ b/content/project/react-lifecycle-cats.mdx
@@ -1,8 +1,9 @@
 ---
 image: '/kmf.PNG'
-title: 'The Lifecycle of a React Component, As Told by Cats'
-description: A whimsical exploration of the React component lifecycle, with each stage humorously explained through the behavior of cats. Perfect for developers looking to understand lifecycle methods in a more relatable and entertaining way.
+title: 'React Project'
+description: A whimsical exploration.
 date: 2024-02-25
+tags: ['Original project', 'updates']
 published: true
 ---
 
