--- a/content/project/summon-component.mdx
+++ b/content/project/summon-component.mdx
@@ -1,7 +1,7 @@
 ---
 image: '/kmf.PNG'
-title: "How to Summon a React Component: A Beginner's Guide"
-description: Dive into the mystical world of React and learn the incantations needed to summon your very first React component with humor and ease.
+title: 'React Project'
+description: Dive into the mystical world.
 date: 2024-02-23
 published: true
 ---
