--- a/content/project/code-blocks.mdx
+++ b/content/project/code-blocks.mdx
@@ -1,9 +1,9 @@
 ---
 image: '/kmf.PNG'
-title: Lets see what we can do with rehype pretty code
-description: Syntax highlighting, line numbers, line highlights, word highlights
+title: 'React Project'
+description: Syntax highlighting
 date: 2024-03-04
-tags: ['code', 'rehype pretty', 'mdx']
+tags: ['Collab', 'Maintainance', 'updates']
 published: true
 ---
 
