--- a/content/project/disappearing-props.mdx
+++ b/content/project/disappearing-props.mdx
@@ -1,9 +1,9 @@
 ---
 image: '/kmf.PNG'
-title: 'The Mysterious Case of the Disappearing Props'
-description: Join us on a humorous detective journey to solve the mystery of disappearing props in a React application. Learn troubleshooting tips and best practices to prevent your props from vanishing into thin air.
+title: 'React Project'
+description: Join us
 date: 2024-03-01
-tags: ['code', 'react', 'props']
+tags: ['Original project', 'updates']
 published: true
 ---
 
