--- a/content/project/hello-world.mdx
+++ b/content/project/hello-world.mdx
@@ -1,9 +1,9 @@
 ---
 image: '/kmf.PNG'
-title: Hello World
-description: This is our first blog post. Really cool
+title: 'React Project'
+description: This is our first blog post
 date: 2024-03-06
-tags: ['code', 'blog']
+tags: ['Original project', 'updates']
 published: true
 ---
 
