--- a/content/project/react-debug-magic.mdx
+++ b/content/project/react-debug-magic.mdx
@@ -1,9 +1,9 @@
 ---
 image: '/kmf.PNG'
-title: "Debugging React with Wizardry and Magic: A Developer's Spellbook"
-description: Enter the mystical world of debugging React applications with a touch of humor. Learn spells and incantations to banish bugs and optimize your code, all while navigating the enchanting forest of React development.
+title: 'React Project'
+description: Enter the mystical.
 date: 2024-02-27
-tags: ['react']
+tags: ['Original project', 'updates']
 published: true
 ---
 
