--- a/content/project/react-hooks.mdx
+++ b/content/project/react-hooks.mdx
@@ -1,8 +1,9 @@
 ---
 image: '/kmf.PNG'
-title: 'React Hooks: Fishing for Components in the React Sea'
-description: Explore the amusing analogy of React Hooks as fishing tools designed to catch components in the vast sea of React development. Learn how to use useState, useEffect, and useContext to manage your catch effectively.
+title: 'React Project'
+description: Explore the amusing analogy.
 date: 2024-02-26
+tags: ['Original project', 'updates']
 published: true
 ---
 
