--- a/content/project/react-state-management.mdx
+++ b/content/project/react-state-management.mdx
@@ -1,7 +1,7 @@
 ---
 image: '/kmf.PNG'
-title: 'React State Management: An Epic Tale of Love, Loss, and Redux'
-description: Embark on a dramatic journey through the realm of React state management. Witness the love triangles, betrayals, and heartaches that components face as they navigate the complex world of state management, with a special appearance by Redux.
+title: 'React Project'
+description: Embark on a dramatic journey.
 date: 2024-02-24
 published: true
 ---
