more project changes

--- a/content/project/ceasor-blog.mdx
+++ b/content/project/ceasor-blog.mdx
@@ -1,23 +1,63 @@
 ---
 image: '/kmf.PNG'
-title: 'React Project'
-description: A markdown cheat sheet for GFM
-date: 2024-03-03
-tags: ['Original project', 'updates']
+title: 'MDX Blog | Portfolio'
+description: A mdx powered website blog | portfolio
+date: 2024-03-28
+tags: ['Original project', 'blog']
 published: true
 ---
 
-# Introduction
+[`CeasorCodes`](https://ceasorcodes.vercel.app/) is a blog | portfolio website created by
+[`CeasorCodes`](https://ceasorcodes.vercel.app/)
 
-The following markdown cheatsheet is adapted from: https://guides.github.com/features/mastering-markdown/
+This Next.js project is a modern web application that leverages the power of TailwindCSS and Shadcn for a sleek, responsive design.
+It utilizes MDX to seamlessly integrate JSX within markdown content, allowing for dynamic components like interactive charts and alerts to be embedded directly into the narrative flow.
+For an enhanced developer experience, it features a Rehype plugin with Shiki syntax highlighting, ensuring that code blocks are not only visually appealing but also accurately represented, both during server-side builds and on the client-side for real-time interactions.
 
-# What is Markdown?
+## Safe Movers Landing page
 
-Markdown is a way to style text on the web. You control the display of the document; formatting words as bold or italic, adding images, and creating lists are just a few of the things we can do with Markdown. Mostly, Markdown is just regular text with a few non-alphabetic characters thrown in, like `#` or `*`.
+<img
+  src="/projects/ceasorcodes1.PNG"
+  alt="Ceasor codes blog"
+  className=" w-full h-56 rounded-xl"
+/>
+<span className="mix-blend-plus-lighter text-zinc-200/80">
+  Figure 1: Ceasorcodes Landing Page
+</span>
 
-# Syntax guide
+---
 
-Here’s an overview of Markdown syntax that you can use anywhere on GitHub.com or in your own text files.
+## Technologies Used
+
+<div className="flex flex-row gap-12">
+  <img
+    src="/technologies/nextjs-fill.svg"
+    alt="technologies used"
+    className=" h-16 w-16 rounded-full"
+  />
+  <img
+    src="/technologies/tailwindcss.svg"
+    alt="technologies used"
+    className=" h-16 w-16 rounded-full"
+  />
+  <img
+    src="/technologies/shadcn.svg"
+    alt="technologies used"
+    className=" h-16 w-16 rounded-full"
+  />
+  <img
+    src="/technologies/framer-motion.svg"
+    alt="technologies used"
+    className=" h-16 w-16 rounded-full"
+  />
+  <img
+    src="/technologies/mdx.svg"
+    alt="technologies used"
+    className=" h-16 w-16 rounded-full"
+  />
+</div>
+
+---
 
 ## Headers
 
