--- a/content/project/kenya-music-festival.mdx
+++ b/content/project/kenya-music-festival.mdx
@@ -7,7 +7,7 @@ tags: ['UI/UX Web Design', 'Backend Development']
 published: true
 ---
 
-[`Kenya Music Festival`](https://kenyamusicfestival.com/) is a Movers company website created by[`CeasorCodes`](https://joseph-gateru.vercel.app/)
+[`Kenya Music Festival`](https://kenyamusicfestival.com/) is a Movers company website created by[`CeasorCodes`](https://ceasorcodes.vercel.app/)
 The Kenya Music Festival is a prestigious event that showcases the
 rich and diverse musical talents of the Kenyan people. The
 festival aims to promote cultural exchange, artistic excellence
