--- a/content/project/safe-movers.mdx
+++ b/content/project/safe-movers.mdx
@@ -8,7 +8,7 @@ published: true
 ---
 
 [`SafeMovers Website`](https://safe-movers.vercel.app/) is a Movers company website created by
-[`CeasorCodes`](https://joseph-gateru.vercel.app/) Welcome to SafeMovers, the one-stop solution for all your moving needs. Our user-friendly website is designed to provide you with a seamless moving experience. Start by requesting a free, no-obligation quote with just a few clicks.
+[`CeasorCodes`](https://ceasorcodes.vercel.app/) Welcome to SafeMovers, the one-stop solution for all your moving needs. Our user-friendly website is designed to provide you with a seamless moving experience. Start by requesting a free, no-obligation quote with just a few clicks.
 Explore our comprehensive range of services, including residential and commercial moves, packing and unpacking, and secure storage solutions. Our dedicated 'Contact Us' page ensures you can easily get in touch with our expert team for personalized service. Plus, with our transparent insurance options, you can move with confidence, knowing your belongings are protected.
 Don't forget to visit our FAQ section for answers to common questions, and review our policies to understand how we prioritize your satisfaction and security with every move. SafeMovers is here to make your transition as smooth as possible.
 
