--- a/content/project/juza-holding-page.mdx
+++ b/content/project/juza-holding-page.mdx
@@ -1,77 +1,70 @@
 ---
-image: '/kmf.PNG'
-title: 'React Project'
-description: Enter the mystical.
-date: 2024-02-27
-tags: ['Original project', 'updates']
+image: '/projects/juzaholdingpage.PNG'
+title: 'Juza Holding Page'
+description: Temporary placeholder
+date: 2023-09-12
+tags: ['Client Project', 'Scratch']
 published: true
 ---
 
-# Debugging React with Wizardry and Magic
+[`Juza Holding Page`](https://juza-holding-page.vercel.app/) is a App Town Technologies Ltd holding page created by
+[`CeasorCodes`](https://ceasorcodes.vercel.app/) A website holding page serves as a temporary placeholder for a website that is under construction or undergoing maintenance.
+It typically features a clean, simple design with a concise message informing visitors of the site's status. Often, it includes a contact form or email address for inquiries and a timeline for when the site is expected to be live.
+This page ensures that visitors are aware of the upcoming site and can still reach out to the website owners during the interim.
 
-In the mystical land of React, where components render and state changes abound, even the most skilled developers can encounter nefarious bugs. Fear not, for I have compiled a spellbook to assist you in banishing these foul creatures back to the depths from whence they came.
+---
 
-## The Spell for Revealing Hidden Bugs
+## Juza Holding page
 
-Hidden bugs are like invisible sprites, causing mischief unseen. Use this spell to reveal them:
+<img
+  src="/projects/juzaholdingpage.PNG"
+  alt="Juza Holding Page"
+  className=" w-full h-56 rounded-xl"
+/>
+<span className="mix-blend-plus-lighter text-zinc-200/80">
+  Figure 1: Juza Holding Page
+</span>
 
-Ingredients:
+---
 
-- 1x careful reading of error messages
-- 2x console.log
-- A dash of breakpoint magic
+## Technologies Used
 
-Chant:
+<div className="flex flex-row gap-12">
+  <img
+    src="/technologies/nextjs-fill.svg"
+    alt="technologies used"
+    className=" h-16 w-16 rounded-full"
+  />
+  <img
+    src="/technologies/tailwindcss.svg"
+    alt="technologies used"
+    className=" h-16 w-16 rounded-full"
+  />
+</div>
 
-```jsx
-console.log('Reveal thyself, bug!');
-```
+---
 
-With this spell, the hidden bug will have no choice but to show itself. Remember, the console is your wand; wield it wisely.
+## Juza Holding Page 2
 
-## The Incantation for Smoothing State Changes
+<img
+  src="/projects/juzaholdingpage2.PNG"
+  alt="Juza Holding Page"
+  className=" w-full h-56 rounded-xl"
+/>
+<span className="mix-blend-plus-lighter text-zinc-200/80">
+  Figure 2: Juza Holding Page 2
+</span>
 
-State changes can be tricky, leading to unexpected behavior. Smooth them over with this incantation:
+---
 
-Ingredients:
+### Github Repository Link
 
-- A pinch of prevState
-- A tablespoon of useEffect
-- A careful reading of the React docs
+[`Click Here`](https://github.com/Ceasor7/Juza-holding-page)
 
-Chant:
+### Deployment Link
 
-```jsx
-this.setState((prevState) => ({
-  ...prevState,
-  newStateValue: 'Magically updated!',
-}));
-```
+[`Click Here`](https://juza-holding-page.vercel.app/)
 
-This careful blend of prevState and useEffect ensures that your state changes are as smooth as a wizard's potion.
+---
 
-## The Potion for Enhancing Performance
-
-To enhance the performance of your React app, brew this powerful potion:
-
-Ingredients:
-
-- 1 part useMemo
-- 2 parts useCallback
-- A sprig of PureComponent
-
-Brew:
-
-Mix these ingredients in your component's cauldron. Use `useMemo` and `useCallback` to prevent unnecessary re-renders, and `PureComponent` to ensure your components only update when truly needed.
-
-```jsx
-const memoizedValue = useMemo(() => computeExpensiveValue(a, b), [a, b]);
-```
-
-With this potion, your app will fly faster than a witch on a broomstick during a full moon.
-
-## Conclusion: The Magic of React Development
-
-Debugging React apps requires a mix of logic, intuition, and a bit of magic. By applying these spells and potions, you can navigate the enchanted forest of React development with ease. Remember, the true magic lies not just in the spells themselves, but in understanding the principles that make them work.
-
-Happy debugging, and may your React journey be magical!
+Have a Project in mind or want to Collaborate 😊 : [`Reach Me`](https://ceasorcodes.vercel.app/contact)
