--- a/content/project/kenya-music-festival.mdx
+++ b/content/project/kenya-music-festival.mdx
@@ -110,4 +110,4 @@ The festival's upcoming events promise to be a symphony of traditional and conte
 
 ---
 
-Have a Project in mind or want to Collaborate 😊 : [`Reach Me`](https://joseph-gateru.vercel.app/contact)
+Have a Project in mind or want to Collaborate 😊 : [`Reach Me`](https://ceasorcodes.vercel.app/contact)
