--- a/content/project/safe-movers.mdx
+++ b/content/project/safe-movers.mdx
@@ -12,6 +12,8 @@ published: true
 Explore our comprehensive range of services, including residential and commercial moves, packing and unpacking, and secure storage solutions. Our dedicated 'Contact Us' page ensures you can easily get in touch with our expert team for personalized service. Plus, with our transparent insurance options, you can move with confidence, knowing your belongings are protected.
 Don't forget to visit our FAQ section for answers to common questions, and review our policies to understand how we prioritize your satisfaction and security with every move. SafeMovers is here to make your transition as smooth as possible.
 
+---
+
 ## Safe Movers Landing page
 
 <img
@@ -68,6 +70,10 @@ Don't forget to visit our FAQ section for answers to common questions, and revie
   Figure 2: Safe Movers Quote Form
 </span>
 
+---
+
+## Description
+
 The SafeMovers quote form designed to provide customers with a quick estimate for their moving costs. Developed using the robust Next.js framework and styled with Tailwind CSS and Shadcn, the form offers a sleek, modern interface.
 It incorporates React Hook Form for efficient form handling and Zod for input validation, ensuring a smooth user experience.
 Upon submission, the form utilizes Resend to securely dispatch the details to the recipient, streamlining the process of obtaining a moving estimate.
@@ -101,4 +107,4 @@ Conveniently located at the bottom of the page is our mini quote form, inviting 
 
 ---
 
-Have a Project in mind or want to Collaborate 😊 : [`Reach Me`](https://joseph-gateru.vercel.app/contact)
+Have a Project in mind or want to Collaborate 😊 : [`Reach Me`](https://ceasorcodes.vercel.app/contact)
