--- a/content/project/ticketing-app.mdx
+++ b/content/project/ticketing-app.mdx
@@ -1,16 +1,104 @@
 ---
-image: '/kmf.PNG'
-title: 'React Project'
-description: This is our first blog post
-date: 2024-03-06
-tags: ['Original project', 'updates']
+image: '/projects/ticketingapp.PNG'
+title: 'Ticketing App'
+description: Create ticketing to serve customers
+date: 2024-02-25
+tags: ['Original project', 'Scratch']
 published: true
 ---
 
-<Callout type="warning">Hello I am a callout</Callout>
+[`Store Ticketing App`](https://ticketing-app12.vercel.app/) is a Store Ticketing Web Application created by [`CeasorCodes`](https://ceasorcodes.vercel.app/)
 
-# Hello World
+Our Ticketing web application is a robust solution designed for a
+repair shop to streamline their service requests and
+collaborations. Developed using the cutting-edge Next.js framework
+and styled with Tailwind CSS for a sleek, responsive user
+interface, our platform ensures an efficient and user-friendly
+experience. At its core, the application utilizes a MongoDB
+database, interfaced through a well-defined API that leverages
+Mongoose schemas to structure the data tables effectively.
+Customers can effortlessly create tickets detailing the issues
+they're encountering with their devices, be it hardware
+malfunctions or software glitches. The system also facilitates
+project collaboration requests, allowing users to propose joint
+ventures with our skilled team. Our commitment to excellence is
+reflected in the seamless integration of technology and service,
+providing a reliable tool for both the repair shop and its
+clientele.
 
-Welcome to my blog `inline code`
+---
 
-### Header 3
+## Ticketing Web Application Landing page
+
+<img
+  src="/projects/ticketingapp.PNG"
+  alt="Ticketing Web Application"
+  className=" w-full h-56 rounded-xl"
+/>
+<span className="mix-blend-plus-lighter text-zinc-200/80">
+  Figure 1: Ticketing Web Application
+</span>
+
+---
+
+## Technologies Used
+
+<div className="flex flex-row gap-12">
+  <img
+    src="/technologies/nextjs-fill.svg"
+    alt="technologies used"
+    className=" h-16 w-16 rounded-full"
+  />
+  <img
+    src="/technologies/tailwindcss.svg"
+    alt="technologies used"
+    className=" h-16 w-16 rounded-full"
+  />
+  <img
+    src="/technologies/mongodb-icon.svg"
+    alt="technologies used"
+    className=" h-16 w-16 rounded-full"
+  />
+</div>
+
+---
+
+## Create Ticket page
+
+<img
+  src="/projects/ticketingapp2.PNG"
+  alt="Create Ticket page"
+  className=" w-full h-56 rounded-xl"
+/>
+<span className="mix-blend-plus-lighter text-zinc-200/80">
+  Figure 2: Create Ticket page
+</span>
+
+<img
+  src="/projects/ticketingapp3.PNG"
+  alt="Create Ticket page"
+  className=" w-full h-56 rounded-xl"
+/>
+<span className="mix-blend-plus-lighter text-zinc-200/80">
+  Figure 3: Create Ticket page 2
+</span>
+
+---
+
+## Description
+
+A customer can login into the web Application and create a ticket which will be display on the admin side and start working on it
+
+---
+
+### Github Repository Link
+
+[`Click Here`](https://github.com/Ceasor7/Ticketing-app)
+
+### Deployment Link
+
+[`Click Here`](https://ticketing-app12.vercel.app/)
+
+---
+
+Have a Project in mind or want to Collaborate 😊 : [`Reach Me`](https://ceasorcodes.vercel.app/contact)
