--- a/content/project/cali.mdx
+++ b/content/project/cali.mdx
@@ -1,50 +1,100 @@
 ---
-image: '/kmf.PNG'
-title: 'React Project'
-description: Step into.
+image: '/projects/cali1.PNG'
+title: 'Cali Institute'
+description: Building a sustainable future for the arts
 date: 2024-02-28
-tags: ['Original project', 'updates']
+tags: ['UI/UX Web Design', 'Backend Development']
 published: true
 ---
 
-# Prop Drilling: The Horror Movie
+[`Cali Institute`](https://www.cali.institute/) is a learning institue website created by[`CeasorCodes`](https://ceasorcodes.vercel.app/)
 
-In the shadowy depths of a complex React application, a horror story unfolds. Components, innocent and unsuspecting, find themselves ensnared in a terrifying ordeal known as prop drilling. This tale of suspense and survival will take you through the darkest corridors of React development.
+The Creative Arts Leadership Institute (CALI) is a premier
+leadership development organization focused on empowering creative
+professionals to lead with vision, purpose, and impact. The CALI
+website showcases the programs, events, and resources that CALI
+offers to its members and partners, as well as the stories and
+achievements of its alumni and faculty.
 
-## The Curse of Prop Drilling
+---
 
-Our story begins in a seemingly ordinary app, where a deep nesting of components lives in harmony. But beneath the surface, a curse lurks: the curse of prop drilling. Props, those precious pieces of data, must traverse through an endless labyrinth of components, each more terrifying than the last.
+## Cali Institute Landing page
 
-```jsx
-const Grandparent = ({ terror }) => <Parent terror={terror} />;
-const Parent = ({ terror }) => <Child terror={terror} />;
-const Child = ({ terror }) => <div>{`The terror has arrived: ${terror}`}</div>;
-```
+<img
+  src="/projects/cali1.PNG"
+  alt="Cali institute landing page"
+  className=" w-full h-56 rounded-xl"
+/>
+<span className="mix-blend-plus-lighter text-zinc-200/80">
+  Figure 1: Cali institute landing page
+</span>
 
-## The Scream in the Console
+---
 
-As the props descend deeper into the component tree, strange things begin to happen. Console logs echo like screams in the night, warning of missing or undefined props. The components, panicked and confused, pass the props down with trembling hands, hoping not to be the next to encounter an error.
+## Technologies Used
 
-## The Heroes Emerge: Context API and Redux
+<div className="flex flex-row gap-12">
+  <img
+    src="/technologies/nextjs-fill.svg"
+    alt="technologies used"
+    className=" h-16 w-16 rounded-full"
+  />
+  <img
+    src="/technologies/tailwindcss.svg"
+    alt="technologies used"
+    className=" h-16 w-16 rounded-full"
+  />
+  <img
+    src="/technologies/framer-motion.svg"
+    alt="technologies used"
+    className=" h-16 w-16 rounded-full"
+  />
+</div>
 
-Just when all hope seems lost, heroes emerge from the shadows: the Context API and Redux. With their powers of global state management, they offer a beacon of light in the dark, illuminating a path to safety for the beleaguered props.
+---
 
-```jsx
-const TerrorContext = React.createContext();
-const TerrorProvider = ({ children }) => {
-  const [terror, setTerror] = useState('everywhere');
-  return (
-    <TerrorContext.Provider value={terror}>{children}</TerrorContext.Provider>
-  );
-};
-```
+## Cali Institute About us Section
 
-## The Final Showdown
+<img
+  src="/projects/cali2.PNG"
+  alt="Cali Institute About us"
+  className=" w-full h-56 rounded-xl"
+/>
+<span className="mix-blend-plus-lighter text-zinc-200/80">
+  Figure 2: Cali Institute About us Section
+</span>
 
-Armed with Context and Redux, the components band together to confront the curse of prop drilling. With a mighty refactor, they implement a new architecture, freeing the props from their endless descent and bringing peace to the application once more.
+---
 
-## Epilogue: Lessons from the Darkness
+## Description
 
-As dawn breaks on our tale, the components emerge wiser and stronger. They've learned that with the right tools and patterns, even the most terrifying challenges in React development can be overcome.
+The website was developed by me using Nextjs, Tailwindcss, and Framer motion, which are
+modern web development tools that enable fast, responsive, and interactive web design. The website reflects the values and
+mission of CALI, as well as the creativity and diversity of its community.
 
-Remember, when faced with the horror of prop drilling, do not despair. The Context API and Redux are your allies in the dark, ready to bring light to your React applications.
+---
+
+## Cali Institute Our Team Section
+
+<img
+  src="/projects/cali3.PNG"
+  alt="Cali Institute About us"
+  className=" w-full h-56 rounded-xl border border-black dark:border-white"
+/>
+<span className="mix-blend-plus-lighter text-zinc-200/80">
+  Figure 3: Cali Institute Our Team Section
+</span>
+
+---
+
+### Github Repository Link
+
+[`Click Here`](https://github.com/Ceasor7/Cali)
+
+### Deployment Link
+
+[`Click Here`](https://www.cali.institute/)
+
+---
+
+Have a Project in mind or want to Collaborate 😊 : [`Reach Me`](https://ceasorcodes.vercel.app/contact)
