--- a/content/project/ceasor-blog.mdx
+++ b/content/project/ceasor-blog.mdx
@@ -1,5 +1,5 @@
 ---
-image: '/kmf.PNG'
+image: '/ceasorcodes1.PNG'
 title: 'MDX Blog | Portfolio'
 description: A mdx powered website blog | portfolio
 date: 2024-03-28
